# abersetz

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  GEMINI.md  IDEA.md  PLAN.md  README.md  SPEC.md  TASKS.md  TESTING.md  TODO.md  WORK.md  build.sh  install.sh  llms.txt  md.txt  publish.sh  pyproject.toml  translation_report.json  update_abersetz.py  update_chunking_config.py  update_cli.py  update_cli_fast.py  update_docs.py  update_engines.py  update_main.py  update_openai_lite.py  update_pipeline.py  update_readme.py  update_setup.py  update_validation.py
.github/workflows/: push.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 0e0add78-43c5-4d05-8944-342f71aca0fc.json  16a01713-3a4a-4f60-b394-7d8768d3b00a.json  43660651-1abc-436f-8ed7-ac7e1dd18f8f.json  d7261a3a-fc7e-461c-a2d5-f46611d4d21d.json  e7a1de17-9156-4be7-b041-f9937e0a5d5d.json
.omc/state/: subagent-tracking.json
.swarm/: dark-matter.md  doc-manifest.json  knowledge.jsonl  telemetry.jsonl
.swarm/session/: state.json
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
.understand-anything/tmp/: ua-arch-analyze.js  ua-arch-input.json  ua-arch-results.json  ua-file-analyzer-input-1.json  ua-file-analyzer-input-10.json  ua-file-analyzer-input-11.json  ua-file-analyzer-input-12.json  ua-file-analyzer-input-2.json  ua-file-analyzer-input-3.json  ua-file-analyzer-input-4.json  ua-file-analyzer-input-5.json  ua-file-analyzer-input-6.json  ua-file-analyzer-input-7.json  ua-file-analyzer-input-8.json  ua-file-analyzer-input-9.json  ua-file-extract-results-1.json  ua-file-extract-results-10.json  ua-scan-files.json  (+12 more)
docs/: _config.yml  api.md  cli.md  configuration.md  index.md  installation.md
examples/: README.md  advanced_api.py  basic_api.py  batch_translate.sh  benchmark.py  benchmark_prep.py  benchmark_results.json  benchmark_results.md  benchmark_run.sh  config_setup.sh  engines_config.json  pipeline.sh  poem_en.txt  poem_pl.txt  translate.sh  validate_report.sh  vocab.json  walkthrough.md
issues/: 102-review.md  103.txt  105.txt  106.md  107.md  108.md  109.md  110.md  111.md  200.txt
scratch/: test_cache_debug.py  test_gguf.py
src_docs/: mkdocs.yaml
tests/: conftest.py  test_chunking.py  test_cli.py  test_config.py  test_engine_catalog.py  test_engines.py  test_examples.py  test_htmladapt_twat.py  test_integration.py  test_job.py  test_local_discovery.py  test_ls.py  test_ml_engine.py  test_offline.py  test_openai_lite.py  test_package.py  test_pipeline.py  test_selector.py  test_setup.py  test_validation.py
(+59 files in other folders)
