# this_file: pyproject.toml

[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "abersetz"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "deep-translator>=1.11",
    "fire>=0.5",
    "httpx>=0.25",
    "loguru>=0.7",
    "langcodes>=3.4",
    "platformdirs>=4.3",
    "rich>=13.9",
    "semantic-text-splitter>=0.7",
    "tenacity>=8.4",
    "translators>=5.9",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < \"3.11\"",
    "language-data>=1.4.0",
]

[[project.authors]]
name = "Adam Twardoch"
email = "adam+github@twardoch.com"

[project.license]
text = "MIT"

[project.urls]
Documentation = "https://github.com/twardoch/abersetz#readme"
Issues = "https://github.com/twardoch/abersetz/issues"
Source = "https://github.com/twardoch/abersetz"

[project.scripts]
abersetz = "abersetz.cli_fast:main"
abtr = "abersetz.cli:abtr_main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.10",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
xclude = ["/dist"]

[tool.hatch.build.targets.wheel]
packages = ["src/abersetz"]

[tool.hatch.build.hooks.vcs]
version-file = "src/abersetz/__about__.py"

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.10",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check {args:src tests}"
fmt = "ruff format {args:src tests}"
default = ["fmt", "lint", "test"]

[tool.uv]
default-groups = ["dev"]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test (requires network/API access)",
]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "pytest",
    "pytest.*",
    "httpx",
    "httpx.*",
    "tenacity",
    "tenacity.*",
    "semantic_text_splitter",
    "semantic_text_splitter.*",
    "platformdirs",
    "platformdirs.*",
    "tomli_w",
    "loguru",
    "loguru.*",
    "langcodes",
    "langcodes.*",
    "rich",
    "rich.*",
    "requests",
    "requests.*",
    "translators",
    "translators.*",
]
ignore_missing_imports = true
